# LensingSSC

./: .gitignore  CLAUDE.md  README.md  analysis.py  analysis_all.py  clkk_all.py  env.sh  gen_patch_all.py  job_manager.py  main.py  noise_all.py  peaks_minima.npz  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  smooth_all.py
.claude/: settings.local.json
.cursor/: project_rules.json
analysis/: calc_cl.py  kappa_cl.py  kappamap.py  map2map3.py
analysis/HOS_Y1/: HOScodes.py  map2map3_wrapper.py
configs/: config_15.yaml  config_analysis.json  config_analysis.yaml  config_bigbox.json  config_bigbox_hp.json  config_cosmo.json  config_cosmo.yaml  config_data.json  config_default.yaml  config_jobgen.json  config_test.yaml  config_tiled.json  config_tiled_hp.json
configs/other_ngal/: config_analysis_ngal50.yaml
configs/other_oa/: config_analysis_oa15.yaml  (+2 more)
docs/: developplan.md  installation.md
lensing_ssc/: README.md  __init__.py
meta/: fibonacci_points.txt  l_edges.txt
notebook/: PDFPeaksMinima.ipynb  analysis.ipynb  analysis_flow.ipynb  covariance.ipynb  database.ipynb  fibonacci.ipynb  fullsky_flow.ipynb  kappa_construction.ipynb  measure.ipynb  plot.ipynb  read_kappa.ipynb  ssc_theory.ipynb  stats_merge.ipynb  sugiyama.ipynb  test.ipynb  test_wlen.ipynb  verify.ipynb
output/: fullsky_stats_bigbox_sl2_noiseless.npy  fullsky_stats_tiled_sl2_ngal30.npy  fullsky_stats_tiled_sl2_noiseless.npy  patch_stats_bigbox_oa10_ngal15_sl10.npy  patch_stats_bigbox_oa10_ngal15_sl2.npy  patch_stats_bigbox_oa10_ngal15_sl5.npy  patch_stats_bigbox_oa10_ngal15_sl8.npy  patch_stats_bigbox_oa10_ngal30_sl10.npy  patch_stats_bigbox_oa10_ngal30_sl2.npy  patch_stats_bigbox_oa10_ngal30_sl5.npy  patch_stats_bigbox_oa10_ngal30_sl8.npy  patch_stats_bigbox_oa10_ngal50_sl10.npy  patch_stats_bigbox_oa10_ngal50_sl2.npy  patch_stats_bigbox_oa10_ngal50_sl5.npy  patch_stats_bigbox_oa10_ngal50_sl8.npy  patch_stats_bigbox_oa10_ngal7_sl10.npy  patch_stats_bigbox_oa10_ngal7_sl2.npy  patch_stats_bigbox_oa10_ngal7_sl5.npy  patch_stats_bigbox_oa10_ngal7_sl8.npy  patch_stats_bigbox_oa10_noiseless_sl10.npy  patch_stats_bigbox_oa10_noiseless_sl2.npy  patch_stats_bigbox_oa10_noiseless_sl5.npy  patch_stats_bigbox_oa10_noiseless_sl8.npy  patch_stats_bigbox_oa10_sl2_noiseless.npy  patch_stats_tiled_oa10_ngal15_sl10.npy  patch_stats_tiled_oa10_ngal15_sl2.npy  patch_stats_tiled_oa10_ngal15_sl5.npy  patch_stats_tiled_oa10_ngal15_sl8.npy  patch_stats_tiled_oa10_ngal30_sl10.npy  patch_stats_tiled_oa10_ngal30_sl2.npy  patch_stats_tiled_oa10_ngal30_sl5.npy  patch_stats_tiled_oa10_ngal30_sl8.npy  patch_stats_tiled_oa10_ngal50_sl10.npy  patch_stats_tiled_oa10_ngal50_sl2.npy  patch_stats_tiled_oa10_ngal50_sl5.npy  patch_stats_tiled_oa10_ngal50_sl8.npy  patch_stats_tiled_oa10_ngal7_sl10.npy  patch_stats_tiled_oa10_ngal7_sl2.npy  patch_stats_tiled_oa10_ngal7_sl5.npy  patch_stats_tiled_oa10_ngal7_sl8.npy  (+5 more)
paper/: main.bib  main.tex  mnras.cls
requirements/: base.txt  heavy.txt
results/: kappa_cl_camb_z0.50.npz  kappa_cl_camb_z1.00.npz  kappa_cl_camb_z2.00.npz
scripts/: 01_run_preprocessing.py  02_run_kappa_generation.py  03_run_analysis.py  04_visualize_results.py  04_visualize_results_refactored.py  __init__.py  qsub_gen.py  sbatch_gen.py  visualize.py  wlen.py
src/: analysis.py  analysis_patch.py  clkk_calculator.py  database_constructor.py  extrema_finder.py  fibonacci_helper.py  fibonacci_optimizer.py  fibonacci_patch.py  find_extrema.py  fullsky_analyser.py  info_extractor.py  job_generator.py  kappa_constructor.py  kappa_preprocessor.py  kappa_smoother.py  kappamap.py  kappamap_cmb.py  noise_generator.py  patch.py  patch_analyser.py  patch_generator.py  patch_processor.py  pipeline_flatsky.py  pipeline_fullsky.py  pipeline_plot.py  plot.py  preanalysis.py  preanalysis_scripts.py  preproc.py  stats_merger.py  stats_merger2.py  stats_plotter.py  test.sh  theory_prediction.py  utilities.py  utils.py  wlen_zs.py
tests/: __init__.py  test_core.py  test_kappamap.py  test_stats.py
(+442 files in other folders)
